phf_macros_tests/tests/compile-fail-uncased/equivalent-keys.stderr
error: duplicate key
 --> tests/compile-fail-uncased/equivalent-keys.rs:6:5
  |
6 |     UncasedStr::new("foo") => 42, //~ ERROR duplicate key UncasedStr("FOO")
  |     ^^^^^^^^^^^^^^^^^^^^^^
